# commplax

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json  install-dev-tools.sh  requirements.txt
.gitea/workflows/: ci-build.yml  ci-cuda.yml  ci-gpu.yml  demo.yml  doc.yml
.github/workflows/: docs.yml
commplax/: __init__.py  adaptive_filter.py  adaptive_filter_.py  adaptive_kernel.py  bert.py  buffer.py  channel.py  coded_mod.py  comm.py  contrib.py  cxopt.py  detector.py  diagnosis.py  dist_matcher.py  dspmodel.py  eq_wip.py  equalizer.py  experimental.py  filter.py  jax_util.py  layer.py  legacy.py  model.py  module.py  op.py  ops.py  opt.py  optim.py  plot.py  rbs.py  resampler.py  signal.py  src.py  subcarrier.py  sym_map.py  sym_timing.py  timing.py  trainer.py  util.py  version.py  (+3 more)
commplax/_deprecated/: _adaptive_filter.py  _equalizer.py  adaptive_filter.py  comm.py  cxopt.py  equalizer.py  experimental.py  plot.py  xcomm.py  xop.py
commplax/analyzers/: __init__.py  timing.py  visualize.py
commplax/client/: __init__.py  gmp.py
commplax/dist_matcher/: __init__.py  ccdm.py  hierdm.py
commplax/fec/: __init__.py  cfec_400zr.py  ofec.py
commplax/framing/: __init__.py  dsp_frame.py  flexo.py
commplax/models/optics/: fiber.py  modulator.py  source.py
commplax/module/: core.py  flax.py  hk.py  layer.py
docs/: api.md  commplax.adaptive_filter.rst  commplax.rst  conf.py  export_examples.sh  index.md  index.rst  installation.md  overview.md  requirements.txt
docs/_static/css/: commplax_theme.css
docs/assets/: custom.css
docs/examples/: 01_basic_mimo.html  01_basic_mimo.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/notebooks/: overview.ipynb  overview.md  quickstart.ipynb
docs/tutorial/: equalizers.ipynb  index.rst  stateful_layer.ipynb
examples/: 01_basic_mimo.py  README.md  hello_world.ipynb  stateful_layer.ipynb
tests/: dm_test.py  xcomm_test.py  xop_test.py
