[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commplax"
version = "0.2.0"
description = "Differentiable DSP library for optical communication"
authors = [
    { name = "Commplax team", email = "remi.qr.fan@gmail.com" }
]
license = { text = "Apache-2.0" }
dependencies = [
    "jax<=0.6.2",
    "jaxlib<=0.6.2",
    "equinox<=0.13.0",
    "seaborn",
    "mpl-scatter-density"
]

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]<=0.6.2" # cuda13 required for jax>=0.7, which is not tested against commplax
]
dev = [
    "attr",
    "mock",
    "pytest",
    "parameterized",
    "ipykernel",
    "ipympl"
]
fs = [
    "zarr[jupyter]==2.9.5",
    "s3fs",
    "fsspec"
]
test = [
    "pytest",
    "pytest-cov"
]
all = [
    "zarr[jupyter]==2.9.5",
    "s3fs",
    "fsspec",
    "plotly",
    "tqdm"
]

