[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commplax"
version = "0.2.0"
description = "Differentiable DSP library for optical communication"
authors = [
    { name = "Commplax team", email = "remi.qr.fan@gmail.com" }
]
license = { text = "Apache-2.0" }
dependencies = [
    "jax",
    "jaxlib",
    "equinox",
    "seaborn",
    "mpl-scatter-density"
]

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]"
]
dev = [
    "attr",
    "mock",
    "pytest",
    "pytest-cov",
    "parameterized",
    "ipykernel",
    "ipympl",
    "tqdm"
]